school-system/src/main/java/com/example/school/system/error/SchoolResourceExistsExceptionHandler.java
package com.example.school.system.error;

public class SchoolResourceExistsExceptionHandler extends RuntimeException {
    public SchoolResourceExistsExceptionHandler(String message) {
        super(message);
    }

}
